# bt-embedded

./: CMakeLists.txt  README.md  bt-embedded.pc.in
.github/workflows/: ci.yml
bt-embedded/: CMakeLists.txt  acl.c  acl.h  backend.h  bte.c  bte.h  buffer.h  client.c  hci.c  hci.h  hci_dev.c  hci_priv.h  hci_proto.h  internals.h  l2cap.c  l2cap.h  l2cap_echo.c  l2cap_priv.h  l2cap_proto.h  l2cap_server.c  l2cap_server.h  logging.h  platform_defs.h  types.h  utils.h
bt-embedded/backends/: README-libusb.md  libusb.c  libusb.h  wii.c  wii.h
bt-embedded/drivers/: generic.c  wii.c
bt-embedded/services/: hid.h  hid_constants.h  obex.c  obex.h  openobex.c  sdp.c  sdp.h  sdp_constants.h
doc/: Doxyfile
example/: CMakeLists.txt  obex.c  terminal.c
tests/: CMakeLists.txt  bte_cpp.h  bte_l2cap_cpp.h  bte_sdp_cpp.h  check_symbol_sizes.sh  dummy_driver.c  helpers.h  l2cap_fixtures.h  mock_backend.cpp  test_buffer.cpp  test_commands.cpp  test_cpp_api.cpp  test_events.cpp  test_l2cap_config.cpp  test_l2cap_connect.cpp  test_l2cap_data.cpp  test_l2cap_disconnect.cpp  test_l2cap_echo.cpp  test_l2cap_info.cpp  test_l2cap_new_configured.cpp  test_l2cap_server.cpp  test_minimal_l2cap.cpp  test_obex_discovery.cpp  test_sdp.cpp  test_sdp_de.cpp  type_utils.h
