if(CMAKE_SYSTEM_NAME MATCHES "Starlet")
    set(PLATFORM_SOURCES
    )
elseif(CMAKE_SYSTEM_NAME MATCHES "NintendoWii")
    set(PLATFORM_SOURCES
        backends/wii.c
    )
    set(DRIVERS_SOURCES
        drivers/wii.c
    )
elseif(LibUSB_FOUND)
    list(APPEND EXTRA_LIBS PkgConfig::LibUSB)
    set(PLATFORM_SOURCES
        backends/libusb.c
    )
    set(DRIVERS_SOURCES
        drivers/generic.c
    )
else()
    message(WARNING "No available platform backend")
endif()

if(OpenObex_FOUND)
    list(APPEND EXTRA_LIBS PkgConfig::OpenObex)
    list(APPEND EXTRA_SOURCES services/openobex.c)
    add_definitions(-DWITH_OPENOBEX)
endif()

add_library(bt-embedded STATIC
    ${DRIVERS_SOURCES}
    ${PLATFORM_SOURCES}
    ${EXTRA_SOURCES}
    acl.c
    bte.c
    client.c
    hci.c
    hci_dev.c
    l2cap.c
    l2cap_echo.c
    l2cap_server.c
    services/obex.c
    services/sdp.c
)

target_include_directories(bt-embedded
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/..
)

target_compile_definitions(bt-embedded PRIVATE
    -DBUILDING_BT_EMBEDDED
)

target_link_options(bt-embedded PRIVATE
    ${EXTRA_LDFLAGS}
)

target_link_libraries(bt-embedded PRIVATE
    ${EXTRA_LIBS}
)

set(PUBLIC_HEADERS
    bte.h
    buffer.h
    client.h
    hci.h
    hci_proto.h
    l2cap.h
    platform_defs.h
    types.h
)


# I didn't find a way to preserve the relative path, so installing these
# manually:
install(FILES
    services/obex.h
    services/sdp.h
    services/sdp_constants.h
    DESTINATION "include/bt-embedded/services"
)

set_target_properties(bt-embedded PROPERTIES
    PUBLIC_HEADER "${PUBLIC_HEADERS}"
)

install(TARGETS bt-embedded
    LIBRARY
    ARCHIVE
    RUNTIME
    PUBLIC_HEADER DESTINATION "include/bt-embedded"
)
